Missing --add-reads clause added to jlink launcher args, legacy service definitions removed